--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&family=Open+Sans:wght@300;400;500&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans';
+}
+
+.form-title {
+  color: black;
   text-align: center;
+  margin: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-login {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin: 2rem 20rem 0 20rem;
+  flex-direction: column;
+  border-bottom: 2px solid lavender;
 }
 
-.App-link {
-  color: #61dafb;
+.form-login__username {
+  width: 30%;
+  padding-top: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-login__pass {
+  width: 30%;
+}
+
+.image {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
